manifests/_crds/destinationrules.networking.istio.io.yaml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1
  kind: DestinationRule
  metadata:
    annotations:
      metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"networking.istio.io/v1alpha3","kind":"DestinationRule","metadata":{"labels":{"controller-uid":"741b1f16-a29c-453d-9b51-db56a7ee96ad"},"name":"ml-pipeline-visualizationserver","namespace":"kubeflow-user-example-com"},"spec":{"host":"ml-pipeline-visualizationserver","trafficPolicy":{"tls":{"mode":"ISTIO_MUTUAL"}}}}'
    labels:
    name: ml-pipeline-visualizationserver
    namespace: kubeflow-user-example-com
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Namespace
      name: kubeflow-user-example-com
  spec:
    host: ml-pipeline-visualizationserver
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
- apiVersion: networking.istio.io/v1
  kind: DestinationRule
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.istio.io/v1alpha3","kind":"DestinationRule","metadata":{"annotations":{},"labels":{"app":"jupyter-web-app","kustomize.component":"jupyter-web-app"},"name":"jupyter-web-app","namespace":"kubeflow"},"spec":{"host":"jupyter-web-app-service.kubeflow.svc.cluster.local","trafficPolicy":{"tls":{"mode":"ISTIO_MUTUAL"}}}}
    labels:
      app: jupyter-web-app
      kustomize.component: jupyter-web-app
    name: jupyter-web-app
    namespace: kubeflow
  spec:
    host: jupyter-web-app-service.kubeflow.svc.cluster.local
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
- apiVersion: networking.istio.io/v1
  kind: DestinationRule
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.istio.io/v1alpha3","kind":"DestinationRule","metadata":{"annotations":{},"labels":{"application-crd-id":"kubeflow-pipelines"},"name":"metadata-grpc-service","namespace":"kubeflow"},"spec":{"host":"metadata-grpc-service.kubeflow.svc.cluster.local","trafficPolicy":{"tls":{"mode":"ISTIO_MUTUAL"}}}}
    labels:
      application-crd-id: kubeflow-pipelines
    name: metadata-grpc-service
    namespace: kubeflow
  spec:
    host: metadata-grpc-service.kubeflow.svc.cluster.local
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
- apiVersion: networking.istio.io/v1
  kind: DestinationRule
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.istio.io/v1alpha3","kind":"DestinationRule","metadata":{"annotations":{},"labels":{"app.kubernetes.io/component":"ml-pipeline","app.kubernetes.io/name":"kubeflow-pipelines","application-crd-id":"kubeflow-pipelines"},"name":"ml-pipeline","namespace":"kubeflow"},"spec":{"host":"ml-pipeline.kubeflow.svc.cluster.local","trafficPolicy":{"tls":{"mode":"ISTIO_MUTUAL"}}}}
    labels:
      app.kubernetes.io/component: ml-pipeline
      app.kubernetes.io/name: kubeflow-pipelines
      application-crd-id: kubeflow-pipelines
    name: ml-pipeline
    namespace: kubeflow
  spec:
    host: ml-pipeline.kubeflow.svc.cluster.local
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
- apiVersion: networking.istio.io/v1
  kind: DestinationRule
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.istio.io/v1alpha3","kind":"DestinationRule","metadata":{"annotations":{},"labels":{"application-crd-id":"kubeflow-pipelines"},"name":"ml-pipeline-minio","namespace":"kubeflow"},"spec":{"host":"minio-service.kubeflow.svc.cluster.local","trafficPolicy":{"tls":{"mode":"ISTIO_MUTUAL"}}}}
    labels:
      application-crd-id: kubeflow-pipelines
    name: ml-pipeline-minio
    namespace: kubeflow
  spec:
    host: minio-service.kubeflow.svc.cluster.local
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
- apiVersion: networking.istio.io/v1
  kind: DestinationRule
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.istio.io/v1alpha3","kind":"DestinationRule","metadata":{"annotations":{},"labels":{"application-crd-id":"kubeflow-pipelines"},"name":"ml-pipeline-mysql","namespace":"kubeflow"},"spec":{"host":"mysql.kubeflow.svc.cluster.local","trafficPolicy":{"tls":{"mode":"ISTIO_MUTUAL"}}}}
    labels:
      application-crd-id: kubeflow-pipelines
    name: ml-pipeline-mysql
    namespace: kubeflow
  spec:
    host: mysql.kubeflow.svc.cluster.local
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
- apiVersion: networking.istio.io/v1
  kind: DestinationRule
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.istio.io/v1alpha3","kind":"DestinationRule","metadata":{"annotations":{},"labels":{"app.kubernetes.io/component":"ml-pipeline","app.kubernetes.io/name":"kubeflow-pipelines","application-crd-id":"kubeflow-pipelines"},"name":"ml-pipeline-ui","namespace":"kubeflow"},"spec":{"host":"ml-pipeline-ui.kubeflow.svc.cluster.local","trafficPolicy":{"tls":{"mode":"ISTIO_MUTUAL"}}}}
    labels:
      app.kubernetes.io/component: ml-pipeline
      app.kubernetes.io/name: kubeflow-pipelines
      application-crd-id: kubeflow-pipelines
    name: ml-pipeline-ui
    namespace: kubeflow
  spec:
    host: ml-pipeline-ui.kubeflow.svc.cluster.local
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
- apiVersion: networking.istio.io/v1
  kind: DestinationRule
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.istio.io/v1alpha3","kind":"DestinationRule","metadata":{"annotations":{},"labels":{"app.kubernetes.io/component":"ml-pipeline","app.kubernetes.io/name":"kubeflow-pipelines","application-crd-id":"kubeflow-pipelines"},"name":"ml-pipeline-visualizationserver","namespace":"kubeflow"},"spec":{"host":"ml-pipeline-visualizationserver.kubeflow.svc.cluster.local","trafficPolicy":{"tls":{"mode":"ISTIO_MUTUAL"}}}}
    labels:
      app.kubernetes.io/component: ml-pipeline
      app.kubernetes.io/name: kubeflow-pipelines
      application-crd-id: kubeflow-pipelines
    name: ml-pipeline-visualizationserver
    namespace: kubeflow
  spec:
    host: ml-pipeline-visualizationserver.kubeflow.svc.cluster.local
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
- apiVersion: networking.istio.io/v1
  kind: DestinationRule
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.istio.io/v1alpha3","kind":"DestinationRule","metadata":{"annotations":{},"labels":{"app":"tensorboards-web-app","kustomize.component":"tensorboards-web-app"},"name":"tensorboards-web-app","namespace":"kubeflow"},"spec":{"host":"tensorboards-web-app-service.kubeflow.svc.cluster.local","trafficPolicy":{"tls":{"mode":"ISTIO_MUTUAL"}}}}
    labels:
      app: tensorboards-web-app
      kustomize.component: tensorboards-web-app
    name: tensorboards-web-app
    namespace: kubeflow
  spec:
    host: tensorboards-web-app-service.kubeflow.svc.cluster.local
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
- apiVersion: networking.istio.io/v1
  kind: DestinationRule
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.istio.io/v1alpha3","kind":"DestinationRule","metadata":{"annotations":{},"labels":{"app":"volumes-web-app","kustomize.component":"volumes-web-app"},"name":"volumes-web-app","namespace":"kubeflow"},"spec":{"host":"volumes-web-app-service.kubeflow.svc.cluster.local","trafficPolicy":{"tls":{"mode":"ISTIO_MUTUAL"}}}}
    labels:
      app: volumes-web-app
      kustomize.component: volumes-web-app
    name: volumes-web-app
    namespace: kubeflow
  spec:
    host: volumes-web-app-service.kubeflow.svc.cluster.local
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
kind: List
metadata:
